<resources>
    <string name="app_name">Basketball</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="A_0">0</string>
    <string name="B_0">0</string>
    <string name="free_throw">free throw</string>
    <string name="_2_points">+2 points</string>
    <string name="_3_points">+3 points</string>
    <string name="reset">reset</string>
</resources>